[package]
name = "tree-statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = { version = "4.6.0", features = ["default", "rayon", "par_iter"]}
clap = { version = "4.4.18", features = ["default", "derive"]}
thiserror = "1.0.56"
memchr = "2.7.1"