[package]
name = "tree-statistics"
version = "0.2.0"
edition = "2021"
authors= ["Lukas Moravec <sydnexpklover@gmail.com>"]
license="MIT"
description="Program with CLI for collectiong statistics on tree collections in bracket notation"
readme="README.md"
homepage="https://github.com/LukMRVC/tree-statistics"
repository="https://github.com/LukMRVC/tree-statistics"
keywords=["bracket", "notation", "statistics", "tree"]
categories=["command-line-utilities", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indextree = { version = "4.6.0", features = ["default", "rayon", "par_iter"]}
clap = { version = "4.4.18", features = ["default", "derive"]}
thiserror = "1.0.56"
memchr = "2.7.1"
rayon = { version = "1.8.1", features = [] }
itertools = { version = "0.12.1", features = [] }
anyhow = { version = "1.0.79", features = [] }
