[package]
name = "tree-statistics"
version = "0.2.0"
edition = "2021"
authors = ["Lukas Moravec <sydnexpklover@gmail.com>"]
license = "MIT"
description = "Program with CLI for collectiong statistics on tree collections in bracket notation"
readme = "README.md"
homepage = "https://github.com/LukMRVC/tree-statistics"
repository = "https://github.com/LukMRVC/tree-statistics"
keywords = ["bracket", "notation", "statistics", "tree"]
categories = ["command-line-utilities", "data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-with-debug]
inherits = "release"
opt-level = 1
debug = true

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"


[dependencies]
indextree = { version = "4.6.0", features = ["default", "rayon", "par_iter"] }
clap = { version = "4.4.18", features = ["default", "derive"] }
thiserror = "1.0.56"
memchr = "2.7.1"
rayon = { version = "1.8.1", features = [] }
itertools = { version = "0.12.1", features = [] }
anyhow = { version = "1.0.79", features = [] }
csv = "1.3.0"
rustc-hash = "2.0.0"
rand = { version = "0.8.5" }
rand_xoshiro = "0.6.0"
num-traits = "0.2.19"
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
crossbeam-channel = "0.5.13"

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-Z", "linker-features=-lld", "-Z", "threads=8"]
